--- a/src/renderer/assets/stylus/main.styl
+++ b/src/renderer/assets/stylus/main.styl
@@ -3,3 +3,4 @@
   src url(/src/renderer/assets/fonts/Orbitron-Regular.ttf)
 main-color = #5764c6
 main-weight-color = #4c59c2
+light-gray-color = #f1f2f5
